--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   background-color: #EDD7D7;
   width: 100%;
   height: 100%;
-  min-height: 100vh;
+  min-height: 932px;
   display: flex;
   flex-direction: column;
   justify-items: center;
