--- a/src/component/inputFiled/InputField.css
+++ b/src/component/inputFiled/InputField.css
@@ -66,3 +66,13 @@
     accent-color: #FF0000;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 430px) {
+    .input__box {
+        width: 350px;
+    }
+    .input__box_2{
+        width: 304px;
+    }
+
+  }
