--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Kadwa:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kadwa:wght@400;700&display=swap");
 .App {
-  background-color: #EDD7D7;
-  width: 100%;
+  background-color: #edd7d7;
+  width: auto;
   height: 100%;
   min-height: 932px;
   display: flex;
@@ -11,6 +11,36 @@
   padding-bottom: 10%;
   font-family: "Kadwa";
   padding: 0 10% 30px 30px;
+  /* position: relative; */
+}
+
+.popUp {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #D9D9D9;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.popUp p {
+  font-family: "Kadwa";
+  font-weight: 700;
+  color: #FF0000;
+  font-size: 15px;
+  line-height: 18px;
+}
+
+.underline {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .graphic-1 {
@@ -20,7 +50,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .graphic-1{
+  .graphic-1 {
     width: 163px;
     height: 197px;
   }
@@ -28,11 +58,5 @@
 
 .description {
   text-align: center;
-  color:  #FF0000;
+  color: #ff0000;
 }
-
-
-
-
-
-
