--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,23 @@
 }
 
 .popUp {
+  position: absolute;
+  top: 50px;
+  right: 20px;
+  width: 300px;
+  background: #D9D9D9;
+  border: 2px solid #FF0000;
+  border-radius: 10px;
+  padding: 20px;
+  z-index: 1000;
+}
+
+.pupUp {
+  width: 371px;
+  height: 554px;
+}
+
+/* .popUp {
   position: fixed;
   top: 0;
   left: 0;
@@ -28,10 +45,11 @@
   z-index: 1000;
   padding: 20px;
   box-sizing: border-box;
-}
+} */
 
 .popUp p {
   font-family: "Kadwa";
+  text-align: center;
   font-weight: 700;
   color: #FF0000;
   font-size: 15px;
