--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,9 @@
   position: absolute;
   top: 50px;
   right: 20px;
-  width: 300px;
-  background: #D9D9D9;
-  border: 2px solid #FF0000;
+  width: 371px;
+  background: #d9d9d9;
+  border: 2px solid #ff0000;
   border-radius: 10px;
   padding: 20px;
   z-index: 1000;
@@ -51,7 +51,7 @@
   font-family: "Kadwa";
   text-align: center;
   font-weight: 700;
-  color: #FF0000;
+  color: #ff0000;
   font-size: 15px;
   line-height: 18px;
 }
@@ -77,4 +77,11 @@
 .description {
   text-align: center;
   color: #ff0000;
+}
+
+@media only screen and (max-width: 450px) {
+  .popUp {
+    width: 220px;
+    /* height: auto; */
+  }
 }
