--- a/src/component/toDo/ToDo.css
+++ b/src/component/toDo/ToDo.css
@@ -13,6 +13,22 @@
     animation: 1s wellBeingToDo;
   }
 
+  .todo-item {
+    /* display: flex;
+    align-items: center;
+    margin: 10px 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px; */
+    transition: all 0.3s ease;
+  }
+
+
+.fade-out {
+  opacity: 0;
+  transform: translateX(100%);
+}
+
 @keyframes wellBeingToDo {
     from {
         margin-left: 100%;
