--- a/src/component/cutomToggle/CustomToggle.css
+++ b/src/component/cutomToggle/CustomToggle.css
@@ -41,3 +41,11 @@
     border-radius: 50%;
     background-color: #000000;
 }
+
+.triangle {
+    width: 0;
+    height: 0;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 10px solid #FF0000; /* Adjust the color as needed */
+  }
