--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,7 @@
 .App {
   background-color: #edd7d7;
   width: auto;
-  height: 100%;
-  min-height: 932px;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-items: center;
@@ -62,8 +61,8 @@
 }
 
 .graphic-1 {
-  width: 300px;
-  height: 400px;
+  width: 200px;
+  height: 266px;
   padding-top: 5%;
 }
 
