--- a/src/component/toDo/ToDo.css
+++ b/src/component/toDo/ToDo.css
@@ -11,22 +11,19 @@
 }
 .wellBeingToDo {
     animation: 1s wellBeingToDo;
+    -webkit-animation: wellBeingToDo 1s forwards;
   }
 
   .todo-item {
-    /* display: flex;
-    align-items: center;
-    margin: 10px 0;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px; */
     transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease; 
   }
 
 
 .fade-out {
   opacity: 0;
   transform: translateX(100%);
+  -webkit-transform: translateX(100%);
 }
 
 @keyframes wellBeingToDo {
@@ -36,6 +33,15 @@
       to {
         margin-left: 0%;
       }
+}
+
+@-webkit-keyframes wellBeingToDo {
+  from {
+    margin-left: 100%;
+  }
+  to {
+    margin-left: 0%;
+  }
 }
 
 @media only screen and (max-width: 460px) {
