--- a/src/component/toDo/ToDo.css
+++ b/src/component/toDo/ToDo.css
@@ -20,11 +20,17 @@
   }
 
 
-.fade-out {
-  opacity: 0;
-  transform: translateX(100%);
-  -webkit-transform: translateX(100%);
-}
+  .fade-out-main {
+    opacity: 0;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    transform: translateX(100%);
+  }
+  
+  .fade-out-wellbeing {
+    opacity: 0;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    transform: translateX(100%);
+  }
 
 @keyframes wellBeingToDo {
     from {
