--- a/src/component/inputFiled/InputField.css
+++ b/src/component/inputFiled/InputField.css
@@ -17,7 +17,8 @@
 
 .input__box {
     width: 306px;
-    height: 58px;
+    min-height: 58px;
+    height: auto;
     border-radius: 20px;
     position: relative;
     padding-left: 60px;
@@ -30,11 +31,13 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 40.16px;
+    word-break: break-all;
 }
 
 .input__box_2 {
-    width: 260px;
-    height: 49px;
+    width: 240px;
+    min-height: 49px;
+    height: auto;
     border-radius: 20px;
     position: relative;
     padding-left: 30px;
