--- a/src/component/inputFiled/InputField.css
+++ b/src/component/inputFiled/InputField.css
@@ -16,8 +16,8 @@
 }
 
 .input__box {
-    width: 306px;
-    min-height: 58px;
+    width: 296px;
+    min-height: 38px;
     height: auto;
     border-radius: 20px;
     position: relative;
@@ -28,15 +28,18 @@
 }
 
 .input__box, .input__box_2 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
     font-weight: 400;
     font-size: 20px;
-    line-height: 40.16px;
+    line-height: 32px;
     word-break: break-all;
 }
 
 .input__box_2 {
     width: 240px;
-    min-height: 49px;
+    min-height: 29px;
     height: auto;
     border-radius: 20px;
     position: relative;
