--- a/src/component/inputFiled/InputField.css
+++ b/src/component/inputFiled/InputField.css
@@ -38,7 +38,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 32px;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .input__box_2 {
